--- a/toko2.html
+++ b/toko2.html
@@ -24,8 +24,8 @@
   <link rel="stylesheet" href="style.css">
   
   <!--favicon-->
-  <link rel="shortcut icon" href="foto.jpg" type="image/x-icon">
-  <link rel="icon" href="foto.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+  <link rel="icon" href="logo.png" type="image/x-icon">
   
   <title>Nomor Seri Ac Alfa Lotim</title>
 </head>
@@ -41,7 +41,7 @@
     <a class="facebook" href="https://www.facebook.com/mahjan.hidayatulloh.9"><span class="fa-brands fa-facebook"></span></a>
     <a class="instagram" href="https://instagram.com/jan159951"><span class="fa-brands fa-instagram"></span></a>
     <a class="telegram" href="https://t.me/mahzan123"><span class="fa-brands fa-telegram"></span></a>
-    <a href="https://portfolio.tirtanadidasger.repl.co"><span class="fa-solid fa-globe"></span></a>
+    <a href="https://mahzan123.github.io"><span class="fa-solid fa-globe"></span></a>
   </div>
   <!-- Sosmed Bar Akhir -->
   
