--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
                   <code><a href="#laskar-danger">9. Laskar Danger</a></code>
                   <code><a href="#lendang-nangka">10. Lendang Nangka</a></code>
                   <code><a href="#gelora">11. Gelora</a></code>
-                  <code><a href="#raya-masbagik">12.Raya Masbagik</a></code>
+                  <code><a href="#saruk">12. Masbagik Saruk</a></code>
                   <code><a href="#masbagik-utara">13. Masbagik Utara</a></code>
                   <code><a href="#masbagik-selatan">14. Masbagik Selatan</a></code>
                   <code><a href="#pasar-masbagik">15. Pasar Masbagik</a></code>
+                  <code><a href="#padamara">16. Padamara</a></code>
                   
                   <code class="text-center mt-2">Created By Mahjan Hidayatulloh.</code>
                 </div>
@@ -97,14 +98,14 @@
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
                 <div class="list accordion-body">
-                  <code><a href="#padamara">16. Padamara</a></code>
                   <code><a href="#dasan-lekong">17. Dasan Lekong</a></code>
                   <code><a href="#tgh-zaenuddin">18. Tgh Zaenuddin</a></code>
                   <code><a href="#ahmad-dahlan">19. Ahmad Dahlan Pancor</a></code>
                   <code><a href="#gajah-mada">20. Gajah Mada Pancor</a></code>
                   <code><a href="#kota-selong">21. Kota Selong</a></code>
                   <code><a href="#rumbuk">22. Rumbuk</a></code>
-                  <code><a href="#denggen-selong">23. Denggen Selong</a></code>
+                  <code><a href="#denggen-selong-4">23. Denggen Selong 4 Unit</a></code>
+                  <code><a href="#denggen-selong-1">.. Denggen Selong 1 Unit</a></code>
                   <code><a href="#diponegoro">24. Diponegoro</a></code>
                   <code><a href="#sawing">25. Simpang Sawing</a></code>
                   <code><a href="#hasanuddin">26. Hasanuddin Selong</a></code>
@@ -167,13 +168,12 @@
                   <code><a href="#seruni-mumbul">46. Seruni Mumbul</a></code>
                   <code><a href="#sambelia">47. Raya Sambelia</a></code>
                   <code><a href="#belanting">48. Belanting</a></code>
-                  <code><a href="#saruk">49. Masbagik Saruk</a></code>
-                  <code><a href="#moh-saleh">50. Moh Saleh km.08</a></code>
-                  <code><a href="#saba">51. Saba Janapria</a></code>
-                  <code><a href="#janapria">52. Janapria</a></code>
-                  <code><a href="#kp-janapria">53. Kp Baru Janapria</a></code>
-                  <code><a href="#pendem">54. Raya Pendem</a></code>
-                  <code><a href="#montong-gamang">55. Montong Gamang</a></code>
+                  <code><a href="#moh-saleh">49. Moh Saleh km.08</a></code>
+                  <code><a href="#saba">50. Saba Janapria</a></code>
+                  <code><a href="#janapria">51. Janapria</a></code>
+                  <code><a href="#kp-janapria">52. Kp Baru Janapria</a></code>
+                  <code><a href="#pendem">53. Raya Pendem</a></code>
+                  <code><a href="#montong-gamang">54. Montong Gamang</a></code>
           
                   <code class="text-center mt-2">Created By Mahjan Hidayatulloh.</code>
                 </div>
@@ -1064,46 +1064,6 @@
   </div>
   <!-- Bagik Bontong 1 akhir -->
   
-  <!-- Bagik Bontong 1 -->
-  <div id="bagik-bontong-2" class="table-responsive-md container mt-5">
-    <table class="table text-dark text-center">
-      <thead class="bg-info">
-        <tr>
-          <th colspan="7">Bagik Bontong II</th>
-        </tr>
-        <tr>
-          <th scope="col">No</th>
-          <th scope="col">Perawatan</th>
-          <th scope="col">Serial</th>
-          <th scope="col">V</th>
-          <th scope="col">A</th>
-          <th scope="col">PSI</th>
-          <th scope="col">temp</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>AC Indoor</td>
-          <td>E202025</td>
-          <td>220</td>
-          <td>7.8</td>
-          <td>130</td>
-          <td>18</td>
-        </tr>
-        <tr class="bg-info">
-          <th scope="row">2</th>
-          <td>AC Outdoor</td>
-          <td>E202072</td>
-          <td>220</td>
-          <td>7.8</td>
-          <td>130</td>
-          <td>38</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <!-- Bagik Bontong 2 akhir -->
   
   <!-- Laskar Danger -->
   <div id="laskar-danger" class="table-responsive-md container mt-5">
@@ -2566,12 +2526,12 @@
   </div>
   <!-- Rumbuk akhir -->
   
-  <!-- Denggen Selong -->
-  <div id="denggen-selong" class="table-responsive-md container mt-5">
+  <!-- Denggen Selong 4 unit -->
+  <div id="denggen-selong-4" class="table-responsive-md container mt-5">
     <table class="table text-dark text-center">
       <thead class="bg-info">
         <tr>
-          <th colspan="7">Denggen Selong</th>
+          <th colspan="7">Denggen Selong 4 Unit</th>
         </tr>
         <tr>
           <th scope="col">No</th>
@@ -2587,52 +2547,52 @@
         <tr>
           <th scope="row">1</th>
           <td>AC Indoor</td>
-          <td>E187311</td>
+          <td>E025443</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
-          <td>18</td>
+          <td>22</td>
         </tr>
         <tr class="bg-info">
           <th scope="row">2</th>
           <td>AC Indoor</td>
-          <td>E199535</td>
+          <td>E019089</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
-          <td>18</td>
+          <td>22</td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td>AC Indoor</td>
-          <td>E197349</td>
+          <td>E017121</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
-          <td>18</td>
+          <td>22</td>
         </tr>
         <tr class="bg-info">
           <th scope="row">4</th>
           <td>AC Indoor</td>
-          <td>E199311</td>
+          <td>E017204</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
-          <td>18</td>
+          <td>22</td>
         </tr>
         <tr>
           <th scope="row">5</th>
           <td>AC Indoor</td>
-          <td>E201130</td>
+          <td>E026402</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
-          <td>18</td>
+          <td>38</td>
         </tr>
         <tr class="bg-info">
           <th scope="row">6</th>
           <td>AC Outdoor</td>
-          <td>E203483</td>
+          <td>E032681</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -2641,7 +2601,7 @@
         <tr>
           <th scope="row">7</th>
           <td>AC Outdoor</td>
-          <td>E182835</td>
+          <td>E032676</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -2650,25 +2610,7 @@
         <tr class="bg-info">
           <th scope="row">8</th>
           <td>AC Outdoor</td>
-          <td>E203316</td>
-          <td>220</td>
-          <td>7.8</td>
-          <td>130</td>
-          <td>38</td>
-        </tr>
-        <tr>
-          <th scope="row">9</th>
-          <td>AC Outdoor</td>
-          <td>E203461</td>
-          <td>220</td>
-          <td>7.8</td>
-          <td>130</td>
-          <td>38</td>
-        </tr>
-        <tr class="bg-info">
-          <th scope="row">10</th>
-          <td>AC Outdoor</td>
-          <td>E203482</td>
+          <td>E032285</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -2677,7 +2619,48 @@
       </tbody>
     </table>
   </div>
-  <!-- Denggen Selong akhir -->
+  <!-- Denggen Selong 4 Unit akhir -->
+  
+  <!-- Denggen Selong 1 Unit -->
+<div id="denggen-selong-1" class="table-responsive-md container mt-5">
+  <table class="table text-dark text-center">
+    <thead class="bg-info">
+      <tr>
+        <th colspan="7">Denggen Selong 1 Unit</th>
+      </tr>
+      <tr>
+        <th scope="col">No</th>
+        <th scope="col">Perawatan</th>
+        <th scope="col">Serial</th>
+        <th scope="col">V</th>
+        <th scope="col">A</th>
+        <th scope="col">PSI</th>
+        <th scope="col">temp</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>AC Indoor</td>
+        <td>E242819</td>
+        <td>220</td>
+        <td>7.8</td>
+        <td>130</td>
+        <td>18</td>
+      </tr>
+      <tr class="bg-info">
+        <th scope="row">2</th>
+        <td>AC Outdoor</td>
+        <td>E264456</td>
+        <td>220</td>
+        <td>7.8</td>
+        <td>130</td>
+        <td>38</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<!-- Denggen Selong 1 Unit akhir -->
   
   <!-- Diponegoro -->
   <div id="diponegoro" class="table-responsive-md container mt-5">
@@ -3000,7 +2983,7 @@
   </div>
   <!-- Hasanuddin Selong akhir -->
   
-  <!-- M.yamin 1 -->
+  <!-- M.yamin 4 unit -->
   <div id="yamin-1" class="table-responsive-md container mt-5">
     <table class="table text-dark text-center">
       <thead class="bg-info">
@@ -3093,9 +3076,9 @@
       </tbody>
     </table>
   </div>
-  <!-- M.yamin 1 akhir -->
+  <!-- M.yamin 4 unit akhir -->
   
-  <!-- M.yamin 2 -->
+  <!-- M.yamin 1 unit -->
   <div id="yamin-2" class="table-responsive-md container mt-5">
     <table class="table text-dark text-center">
       <thead class="bg-info">
@@ -3134,7 +3117,7 @@
       </tbody>
     </table>
   </div>
-  <!-- M.yamin 2 akhir -->
+  <!-- M.yamin 1 unit akhir -->
   
   <!-- KH Hasyim -->
   <div id="hasyim" class="table-responsive-md container mt-5">
