--- a/toko2.html
+++ b/toko2.html
@@ -64,10 +64,10 @@
               </h2>
               <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                 <div class="list accordion-body">
-                  <code><a href="#moyot">56. Moyot Sakra</a></code>
-                  <code><a href="#sandubaya">57. Sandubaya Selong</a></code>
-                  <code><a href="#kalpataru">58. Kalpataru</a></code>
-                  <code><a href="#suela">59. Pariwisata Suela</a></code>
+                  <code><a href="#moyot">55. Moyot Sakra</a></code>
+                  <code><a href="#sandubaya">56. Sandubaya Selong</a></code>
+                  <code><a href="#kalpataru">57. Kalpataru</a></code>
+                  <code><a href="#suela">58. Pariwisata Suela</a></code>
                   
                   <code class="text-center mt-2">Created By Mahjan Hidayatulloh.</code>
                 </div>
@@ -86,6 +86,7 @@
               </h2>
               <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
                 <div class="list accordion-body">
+                  <code><a href="#">59. Raya Masbagik</a></code>
                   <code><a href="#">60. Suralaga Anjani</a></code>
                   <code><a href="#">61. Masbagik Anjani</a></code>
                   <code><a href="#">62. Raya Dasan Lekong</a></code>
