--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
    
         </ul>
       </div>
+      <div class="list-angka">Bagian 1</div>
     </nav>
     <!--Akhir Navbar-->
   </header>
@@ -1500,7 +1501,7 @@
   <!-- Raya Masbagik akhir -->
   
   <!-- Masbagik Utara -->
-  <div id="masbagik-utara" class="table-responsive-md container mt-5">
+  <div id="masambbagik-utara" class="table-responsive-md container mt-5">
     <table class="table text-dark text-center">
       <thead class="bg-info">
         <tr>
