--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
               </h2>
               <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
                 <div class="list accordion-body">
-                  <code><a href="#montong-gading">58. none</a></code>
-                  <code><a href="#terara">59. none</a></code>
+                  <code><a href="#kembang-kerang">58. Kembang Kerang Daya</a></code>
+                  <code><a href="#rapi-pringgasela">59. Rapi Pringgasela</a></code>
         
                   <code class="text-center mt-2">Created By Mahjan Hidayatulloh.</code>
                 </div>
@@ -6261,7 +6261,7 @@
     <table class="table text-dark text-center">
       <thead class="bg-info">
         <tr>
-          <th colspan="7">Surabaya</th>
+          <th colspan="7">Surabaya 4 Unit</th>
         </tr>
         <tr>
           <th scope="col">No</th>
@@ -6349,16 +6349,12 @@
       </tbody>
     </table>
   </div>
-  <!-- Surabaya akhir -->
-  <!-- AKHIR LIST TOKO 4 -->
   
-  <!-- LIST TOKO 5 -->
-  <!-- Surabaya -->
-  <div id="none" class="table-responsive-md container mt-5">
+  <div class="table-responsive-md container mt-5">
     <table class="table text-dark text-center">
       <thead class="bg-info">
         <tr>
-          <th colspan="7">Surabaya</th>
+          <th colspan="7">Surabaya 1 Unit</th>
         </tr>
         <tr>
           <th scope="col">No</th>
@@ -6374,7 +6370,50 @@
         <tr>
           <th scope="row">1</th>
           <td>AC Indoor</td>
-          <td>E137765</td>
+          <td>E125599</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>22</td>
+        </tr>
+        <tr class="bg-info">
+          <th scope="row">2</th>
+          <td>AC Outdoor</td>
+          <td>E109658</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>22</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <!-- Surabaya akhir -->
+  <!-- AKHIR LIST TOKO 4 -->
+  
+  <!-- LIST TOKO 5 -->
+  <!-- Kembang Kerang -->
+  <div id="kembang-kerang" class="table-responsive-md container mt-5">
+    <table class="table text-dark text-center">
+      <thead class="bg-info">
+        <tr>
+          <th colspan="7">Kembang Kerang Daya</th>
+        </tr>
+        <tr>
+          <th scope="col">No</th>
+          <th scope="col">Perawatan</th>
+          <th scope="col">Serial</th>
+          <th scope="col">V</th>
+          <th scope="col">A</th>
+          <th scope="col">PSI</th>
+          <th scope="col">temp</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>AC Indoor</td>
+          <td>E143942</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -6383,7 +6422,7 @@
         <tr class="bg-info">
           <th scope="row">2</th>
           <td>AC Indoor</td>
-          <td>E154917</td>
+          <td>E150530</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -6392,7 +6431,7 @@
         <tr>
           <th scope="row">3</th>
           <td>AC Indoor</td>
-          <td>E154243</td>
+          <td>E112872</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -6401,7 +6440,7 @@
         <tr class="bg-info">
           <th scope="row">4</th>
           <td>AC Indoor</td>
-          <td>E123121</td>
+          <td>E148669</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -6410,7 +6449,7 @@
         <tr>
           <th scope="row">5</th>
           <td>AC Outdoor</td>
-          <td>E139199</td>
+          <td>E114793</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -6419,7 +6458,7 @@
         <tr class="bg-info">
           <th scope="row">6</th>
           <td>AC Outdoor</td>
-          <td>E136700</td>
+          <td>E114841</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -6428,7 +6467,7 @@
         <tr>
           <th scope="row">7</th>
           <td>AC Outdoor</td>
-          <td>E143847</td>
+          <td>E114847</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -6437,7 +6476,7 @@
         <tr class="bg-info">
           <th scope="row">8</th>
           <td>AC Outdoor</td>
-          <td>E139167</td>
+          <td>E113996</td>
           <td>220</td>
           <td>7.8</td>
           <td>130</td>
@@ -6446,102 +6485,102 @@
       </tbody>
     </table>
   </div>
-  <!-- Surabaya akhir -->
+  <!-- Kembang Kerang akhir -->
 
-<!-- Surabaya -->
-<div id="none" class="table-responsive-md container mt-5">
-  <table class="table text-dark text-center">
-    <thead class="bg-info">
-      <tr>
-        <th colspan="7">Surabaya</th>
-      </tr>
-      <tr>
-        <th scope="col">No</th>
-        <th scope="col">Perawatan</th>
-        <th scope="col">Serial</th>
-        <th scope="col">V</th>
-        <th scope="col">A</th>
-        <th scope="col">PSI</th>
-        <th scope="col">temp</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>AC Indoor</td>
-        <td>E137765</td>
-        <td>220</td>
-        <td>7.8</td>
-        <td>130</td>
-        <td>22</td>
-      </tr>
-      <tr class="bg-info">
-        <th scope="row">2</th>
-        <td>AC Indoor</td>
-        <td>E154917</td>
-        <td>220</td>
-        <td>7.8</td>
-        <td>130</td>
-        <td>22</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>AC Indoor</td>
-        <td>E154243</td>
-        <td>220</td>
-        <td>7.8</td>
-        <td>130</td>
-        <td>22</td>
-      </tr>
-      <tr class="bg-info">
-        <th scope="row">4</th>
-        <td>AC Indoor</td>
-        <td>E123121</td>
-        <td>220</td>
-        <td>7.8</td>
-        <td>130</td>
-        <td>22</td>
-      </tr>
-      <tr>
-        <th scope="row">5</th>
-        <td>AC Outdoor</td>
-        <td>E139199</td>
-        <td>220</td>
-        <td>7.8</td>
-        <td>130</td>
-        <td>38</td>
-      </tr>
-      <tr class="bg-info">
-        <th scope="row">6</th>
-        <td>AC Outdoor</td>
-        <td>E136700</td>
-        <td>220</td>
-        <td>7.8</td>
-        <td>130</td>
-        <td>38</td>
-      </tr>
-      <tr>
-        <th scope="row">7</th>
-        <td>AC Outdoor</td>
-        <td>E143847</td>
-        <td>220</td>
-        <td>7.8</td>
-        <td>130</td>
-        <td>38</td>
-      </tr>
-      <tr class="bg-info">
-        <th scope="row">8</th>
-        <td>AC Outdoor</td>
-        <td>E139167</td>
-        <td>220</td>
-        <td>7.8</td>
-        <td>130</td>
-        <td>38</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<!-- Surabaya akhir -->
+  <!-- Rapi Pringgasela -->
+  <div id="rapi-pringgasela" class="table-responsive-md container mt-5">
+    <table class="table text-dark text-center">
+      <thead class="bg-info">
+        <tr>
+          <th colspan="7">Rapi Pringgasela</th>
+        </tr>
+        <tr>
+          <th scope="col">No</th>
+          <th scope="col">Perawatan</th>
+          <th scope="col">Serial</th>
+          <th scope="col">V</th>
+          <th scope="col">A</th>
+          <th scope="col">PSI</th>
+          <th scope="col">temp</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>AC Indoor</td>
+          <td>E148585</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>22</td>
+        </tr>
+        <tr class="bg-info">
+          <th scope="row">2</th>
+          <td>AC Indoor</td>
+          <td>E150546</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>AC Indoor</td>
+          <td>E116701</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>22</td>
+        </tr>
+        <tr class="bg-info">
+          <th scope="row">4</th>
+          <td>AC Indoor</td>
+          <td>E118854</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td>AC Outdoor</td>
+          <td>E113979</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>38</td>
+        </tr>
+        <tr class="bg-info">
+          <th scope="row">6</th>
+          <td>AC Outdoor</td>
+          <td>E112470</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>38</td>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td>AC Outdoor</td>
+          <td>E112500</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>38</td>
+        </tr>
+        <tr class="bg-info">
+          <th scope="row">8</th>
+          <td>AC Outdoor</td>
+          <td>E113978</td>
+          <td>220</td>
+          <td>7.8</td>
+          <td>130</td>
+          <td>38</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <!-- Rapi Pringgasela akhir -->
   <!-- AKHIR LIST TOKO 5 -->
   
   <footer id="footer" class="container text-center mt-5 mb-5">
