--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
                   <code><a href="#selebung">54. Selebung</a></code>
                   <code><a href="#sikur">55. Sikur</a></code>
                   <code><a href="#mekar-sikur">56. Mekar Sikur</a></code>
-                  <code><a href="#surabaya">57. Surabaya</a></code>
+                  <div class="d-flex justify-content-center">
+                    <code><a href="#surabaya4">57. Surabaya 4 Unit</a></code>
+                    <code><a href="#surabaya1">.. Surabaya 1 Unit</a></code>
+                  </div>
           
                   <code class="text-center mt-2">Created By Mahjan Hidayatulloh.</code>
                 </div>
@@ -6257,7 +6260,7 @@
   <!-- Mekar Sikur akhir -->
   
   <!-- Surabaya -->
-  <div id="surabaya" class="table-responsive-md container mt-5">
+  <div id="surabaya4" class="table-responsive-md container mt-5">
     <table class="table text-dark text-center">
       <thead class="bg-info">
         <tr>
@@ -6350,7 +6353,7 @@
     </table>
   </div>
   
-  <div class="table-responsive-md container mt-5">
+  <div id="surabaya1" class="table-responsive-md container mt-5">
     <table class="table text-dark text-center">
       <thead class="bg-info">
         <tr>
